--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "git-remote-origin-url": "^3.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
     "tachyons": "^4.11.1"
   },
   "scripts": {
